# code

./: .gitmodules  LICENSE  README  lock.h  log.cpp  log.h
cpp/away/: CMakeLists.txt  Makefile
cpp/away/shaders/: fragment.glsl  vertex.glsl
cpp/away/src/: main.cpp  main2.cpp
cpp/corex/: .clangd  CMakeLists.txt  Makefile
cpp/corex/cmake/: FindSDL2_mixer.cmake
cpp/corex/corex/: CMakeLists.txt
cpp/corex/corex/src/: Context.cpp  Engine.cpp  FileUtils.cpp  MusicManager.cpp
cpp/corex/meconium/: CMakeLists.txt
cpp/corex/meconium/art/: overworld3.tmx  overworld3.tsx
cpp/corex/meconium/include/: CharacterSelectState.h  GameOverState.h  LevelSelectState.h  Meconium.h  MenuState.h
cpp/corex/meconium/src/: CharacterSelectState.cpp  GameOverState.cpp  LevelSelectState.cpp  Meconium.cpp  MenuState.cpp
cpp/excelsive/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  schedule.cpp  schedule.h
cpp/gtkls/: CMakeLists.txt  CMakePresets.json  Makefile  main.cpp
cpp/hottogo/: .clangd  .gitignore  CMakeLists.txt  Makefile
cpp/hottogo/include/: Signal.h  args.h
cpp/hottogo/include/db/: Database.h  Statement.h  TableBuilder.h  database.h  statement.h  table_builder.h
cpp/hottogo/include/runner/: daemon.h  runner.h  ui.h
cpp/hottogo/include/server/: Pixel.h  Server.h  server.h
cpp/hottogo/src/: Signal.cpp  args.cpp  main.cpp  sig.cpp
cpp/hottogo/src/db/: Database.cpp  Statement.cpp  TableBuilder.cpp  database.cpp  statement.cpp  table_builder.cpp
cpp/hottogo/src/runner/: daemon.cpp  ui.cpp
cpp/hottogo/src/server/: Server.cpp  server.cpp
cpp/hyprman/: .gitignore  CMakeLists.txt  Makefile
cpp/hyprman/include/: window.hpp
cpp/hyprman/src/: main.cpp  window.cpp
cpp/hyprwad/: .gitignore  CMakeLists.txt  Makefile  wifi.sh
cpp/hyprwad/src/: choice.hpp  main.cpp  ui.hpp
cpp/hyprwat/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  main.cpp  wayland_popup
cpp/hyprwat/src/: font.hpp  input.cpp  input.hpp  main.cpp  main_old.cpp  signal.hpp  ui.cpp  ui.hpp  vec2.hpp
cpp/hyprwat/src/font/: font.cpp
cpp/hyprwat/src/hyprland/: hyprland_ipc.cpp  hyprland_ipc.hpp  ipc.cpp  ipc.hpp
cpp/hyprwat/src/menu/: popup_menu.cpp  popup_menu.hpp
cpp/hyprwat/src/protocols/: wlr-layer-shell-unstable-v1-client-protocol.h
cpp/hyprwat/src/renderer/: egl_context.cpp  egl_context.hpp
cpp/hyprwat/src/selection/: selector.cpp  selector.hpp
cpp/hyprwat/src/wayland/: display.cpp  display.hpp  input.cpp  input.hpp  layer_surface.cpp  layer_surface.hpp  wayland.cpp  wayland.hpp
cpp/hyprwat/wayland/: Makefile  main.cpp
cpp/meconium/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  bundle.sh  main.cpp
cpp/meconium/art/: Meconium.tmx  Meconium.tsx  level2.tmx  overworld3.tmx  tileset.tsx
cpp/meconium/assets/: map.csv
cpp/meconium/assets/audio/: sounds.json
cpp/meconium/assets/maps/: level1.csv  level1.json  level2.csv  level2.json  level3.csv
cpp/meconium/assets/players/: archer.json  blue.json  cyberpunk.json  xena.json
cpp/meconium/assets/sprites/: cyberpunk.json  player.json  xena.json
cpp/meconium/assets/tilesets/: overworld1_tiles.json  overworld2_tiles.json  overworld3_tiles.json
cpp/meconium/cmake/: FindSDL2_ttf.cmake
cpp/meconium/corex/src/: Context.cpp  Engine.cpp  FileUtils.cpp  ResourceManager.cpp  SoundManager.cpp  TileMapRenderer.cpp
cpp/meconium/include/: Animation.h  Camera.h  CharacterSelectState.h  Context.h  ECS.h  Engine.h  Entity.h  FileUtils.h  GameOverState.h  GameState.h  GameTime.h  Level.h  Meconium.h  MenuState.h  MovementSystem.h  Rect.h  ResourceManager.h  SoundManager.h  StateManager.h  TileMap.h  TileMapRenderer.h  Utils.h  Vec2.h
cpp/meconium/include/assets/: AssetLoader.h  Definitions.h
cpp/meconium/include/components/: Animation.h  Attack.h  Background.h  Bag.h  Camera.h  CameraComponent.h  Collider.h  Debug.h  DelayedAction.h  Despawn.h  EnemyAI.h  EnemyBehavior.h  Health.h  InputControl.h  Knockback.h  NoGravity.h  Pickup.h  SoundEffect.h  Sprite.h  State.h  Tag.h  TileMap.h  Transform.h  Tween.h
cpp/meconium/include/ecs/: Animation.h  AnimationSystem.h  CameraComponent.h  CameraSystem.h  Collider.h  CollisionSystem.h  Component.h  ECS.h  Entity.h  InputControl.h  InputSystem.h  MovementSystem.h  Position.h  RenderSystem.h  Sprite.h  Transform.h  Velocity.h
cpp/meconium/include/entity/: Entity.h  EntityFactory.h
cpp/meconium/include/level/: Enemy.h  Level.h  Pickup.h  Player.h
cpp/meconium/include/systems/: AnimationSystem.h  CameraSystem.h  CollisionSystem.h  CombatSystem.h  DebugSystem.h  DelayedActionSystem.h  EnemyAISystem.h  EnemyStateSystem.h  InputSystem.h  LifecycleSystem.h  MovementSystem.h  PickupSystem.h  ProjectileSystem.h  RenderSystem.h  SoundSystem.h  SpawnerSystem.h  StateSystem.h  TweenSystem.h  UIRenderSystem.h
cpp/meconium/man/: meconium.6
cpp/meconium/meconium/: CMakeLists.txt
cpp/meconium/meconium/include/: CharacterSelectState.h  GameOverState.h  Meconium.h
cpp/meconium/meconium/src/: Meconium.cpp  MenuState.cpp  main.cpp
cpp/meconium/src/: CharacterSelectState.cpp  Context.cpp  Engine.cpp  FileUtils.cpp  GameOverState.cpp  Meconium.cpp  MenuState.cpp  MusicManager.cpp  ResourceManager.cpp  SoundManager.cpp  TileMap.cpp  TileMapRenderer.cpp  main.cpp
cpp/meconium/src/assets/: AssetLoader.cpp
cpp/meconium/src/components/: Animation.cpp  (+1 more)
cpp/mimic/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
cpp/mimic/include/: component.hpp  entity.h  entity.hpp  mcamera.hpp  tex.hpp
cpp/mimic/shaders/: default.vs  lighting.fs  lighting.vs  sky.fs  wall.fs
cpp/mimic/src/: main.cpp  mcamera.cpp  tex.cpp
cpp/wandering/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  blender_convert.py
cpp/wandering/assets/: Zlorp.blend  jump.glb  map.json  player.glb  zlorp.glb
cpp/wandering/src/: camera.cpp  camera.hpp  components.hpp  debug.cpp  debug.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  resources.cpp  resources.hpp  systems.cpp  systems.hpp  world.cpp  world.hpp
(+452 files in other folders)
