cmake_minimum_required(VERSION 3.16)
project(gtkls CXX)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED gtk4)
pkg_check_modules(GTK_LAYER_SHELL REQUIRED gtk4-layer-shell-0)
add_executable(gtkls main.cpp)
target_include_directories(gtkls PRIVATE ${GTK4_INCLUDE_DIRS} ${GTK_LAYER_SHELL_INCLUDE_DIRS})
target_compile_options(gtkls PRIVATE ${GTK4_CFLAGS_OTHER})
target_link_libraries(gtkls PRIVATE ${GTK4_LIBRARIES} ${GTK_LAYER_SHELL_LIBRARIES})
